cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template/o3-mini/row_6_update_14_template_20250430_100655.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "CloudFormation template to deploy an EC2 instance with an associated Security Group allowing SSH access (port 22). This template creates a VPC, Subnet, Internet Gateway with a public route, and then launches an EC2 instance within that network."

Mappings:
  RegionMap:
    us-east-1:
      AMI: "ami-0c94855ba95c71c99"
    us-west-2:
      AMI: "ami-0bdb828fd58c52235"
    eu-west-1:
      AMI: "ami-047bb4163c506cd98"

Parameters:
  InstanceType:
    Description: "EC2 instance type"
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    ConstraintDescription: "Must be a valid EC2 instance type."

Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: "MyVPC"

  MySubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      Tags:
        - Key: Name
          Value: "MySubnet"

  MyInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: "MyInternetGateway"

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: "PublicRouteTable"

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref MyInternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MySubnet
      RouteTableId: !Ref PublicRouteTable

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref MyVPC
      GroupDescription: "Security Group for EC2 instance allowing SSH access on port 22"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: "InstanceSecurityGroup"

  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap
        - RegionMap
        - !Ref "AWS::Region"
        - AMI
      SubnetId: !Ref MySubnet
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: "MyEC2Instance"

Outputs:
  VPCId:
    Description: "The ID of the VPC"
    Value: !Ref MyVPC
  SubnetId:
    Description: "The ID of the Subnet"
    Value: !Ref MySubnet
  InstanceId:
    Description: "The ID of the deployed EC2 instance"
    Value: !Ref MyEC2Instance
  SecurityGroupId:
    Description: "The ID of the deployed Security Group"
    Value: !Ref InstanceSecurityGroup
